# yt-hist-search

./: .envrc  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: release.yml
electron/: main.cjs  preload.cjs
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: settings.ts
frontend/src/components/: BackendDriverField.tsx  LlmBackendField.tsx  ScoreThresholdField.tsx  YoutubeDataApiKeyField.tsx  YoutubeDataStringField.tsx  YoutubeVideoCard.tsx
frontend/src/hooks/: useSettings.ts
frontend/src/pages/: ImportProgressPage.tsx  LandingPage.tsx  SearchPage.tsx  SettingsPage.tsx
scripts/: build-electron.js  fetch_youtube_video_metadata.py  generate_youtube_string_blob.py  setup-dev-environment.js
src/ythist/: api.py  cli.py  indexing.py  llm_router.py  settings.py  takeout.py  youtube_metadata.py  youtube_string_blob.py
